# irbstudio

./: .gitignore  pyproject.toml  setup.py
crmstudio/config_templates/: example_column_mapping.yaml
crmstudio/core/: base_test.py
crmstudio/metrics/: ecl_backtest.py
irbstudio.egg-info/: PKG-INFO  SOURCES.txt
irbstudio/core/: base_test.py  dataset.py  dataset_loader.py
