[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crmstudio"
version = "0.0.1"
description = "Monitoring and validation toolkit for credit risk models under the IRB and IFRS9 frameworks"
readme = "README.md"
requires-python = ">=3.7"
authors = [
    { name = "Jacek Krawiec", email = "your.email@example.com" }
]
license = { text = "MIT" }
keywords = ["IRB", "credit risk", "validation", "monitoring", "ECB"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Scientific/Engineering :: Information Analysis",
]